[package]
name = "mszserveraxum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }

mongodb =  { version = "3.2.3"}
#mongodb =  { version = "3.2.3", features = ["sync"]}
bson = "2.14.0"
tower-http = { version = "0.6.4", features = ["cors"] }
uuid="1.16.0"